# wheresthemoon

./: .gitignore  CLAUDE.md  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/lapislucera/wheresthemoon/: ApplicationTest.java  OnDeviceSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/databases/: voc.db
app/src/main/java/com/lapislucera/wheresthemoon/: Complications.kt  Ephemeris.kt  MoonDisplay.kt  VOCDataBase.java  VocDatabase.kt  WTMAppWidget.java  WTMAppWidget.kt  WTMComplication.kt  WTMDream.java  WTMDream.kt  WTMService.java  WidgetRender.kt
app/src/main/res/layout/: wtm_complication.xml  wtm_complication_text.xml  wtmapp_widget.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/main/res/xml/: wtm_aspect_info.xml  wtm_complication_info.xml  wtm_ingress_info.xml  wtmapp_widget_info.xml
app/src/test/java/com/lapislucera/wheresthemoon/: ComplicationsTest.kt  EphemerisTest.kt  MoonDisplayTest.kt  VocDatabaseTest.kt  WTMAppWidgetTest.kt  WTMComplicationTest.kt  WidgetRenderTest.kt
docs/: stack_overflow_question_unasked.txt
gradle/: libs.versions.toml
tools/vocgen/: Cargo.toml  compare.py
tools/vocgen/src/: main.rs
